fixed simultaneous playing, made player visible

--- a/style.css
+++ b/style.css
@@ -84,46 +84,18 @@ position: absolute;
 	opacity:1;
 }
 .song:hover audio{
-	opacity:1;
+	opacity:0.8;
 }
 
-/* a{
-	position: absolute;
-	display: block;
-	bottom: 0;
-	margin-left:auto;
-	margin-right: auto;
-	left:50%;
-	transform: translate(-50%,-25%); 
-	cursor:pointer;
-	opacity: 0.6;
-	z-index: 1;
-	transition: all 0.2s ease-in-out;
-
-}
-a:hover{
-	opacity: 1;
-}
-img{
-	height: 70px;
-	width: 70px;
-	border-radius: 50%;
-	transition: all 0.2s ease-in-out;
-}
-img:hover{
-	border:1px solid white;
-
-} */
 .audiofile{
 	position: absolute;
 	display:block;
-	bottom:5px;
+	bottom:-3px;
 
 }
 audio{
 	width: 200px;
-	opacity:0;
+	opacity:0.5;
 	transition: all 0.3s ease-in-out;
-	 background-color: #black;
-
+	background-color: #black;
 }
